--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,17 @@
         android:theme="@style/Theme.GestionResiduos"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.gestionresiduos.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
