--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activityCompose = "1.8.0"
 composeBom = "2024.04.01"
 splashscreen = "1.0.1"
 navigation = "2.5.3"
+material3 = "1.1.0"
 
 
 [libraries]
@@ -29,6 +30,8 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "splashscreen" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
